Added Assets, and left sidebar

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -48,7 +48,7 @@
             {% endblock %}
 
             {% block sidebar %}
-                {% include 'partials/sidebar.html.twig' %}
+                {% include 'partials/left-sidebar.html.twig' %}
             {% endblock %}
         {% endembed %}
         </section>
