--- a/templates/partials/layout.html.twig
+++ b/templates/partials/layout.html.twig
@@ -1,10 +1,17 @@
 <div class="container-fluid pl-60 pr-60">
     <div class="row">
         {% if show_sidebar %}
-            {% block sidebar %}{% endblock %}
+            {% block left_sidebar %}{% endblock %}
         {% endif %}
 
         {% block item %}{% endblock %}
+
+
+        {% if show_sidebar %}
+            {% block right_sidebar %}{% endblock %}
+        {% endif %}
+
+        {% block NEXT_POST %}{% endblock %}
     </div>
 </div>
 
