--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,7 +1,7 @@
 <section class="page_breadcrumb">
     <div class="container-fluid pl-60 pr-60">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-lg-2 col-sm-7">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                     {% include 'partials/logo.html.twig' %}
@@ -9,25 +9,32 @@
                     </ol>
                 </nav>
             </div>
-            <div class="col-sm-5">
+            <div class="col-lg-8 col-md-8">
+            <section class="breadcrumb_area">
+                <div class="container custom_container">
+                    <form action="#" class="banner_search_form banner_search_form_two">
+                        <div class="input-group">
+                            <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
+                            <div class="input-group-append">
+                                <select class="custom-select" id="inlineFormCustomSelect">
+                                    <option selected>All Category</option>
+                                    <option value="1">Doc Archive</option>
+                                    <option value="2">Doc List</option>
+                                    <option value="3">coreBOS</option>
+                                </select>
+                            </div>
+                            <button type="submit"><i class="icon_search"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </section>
+            </div>
+            <div class="col-lg-2 col-sm-5">
                 <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
             </div>
         </div>
     </div>
-    <div class="container custom_container">
-        <form action="#" class="banner_search_form banner_search_form_two">
-            <div class="input-group">
-                <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
-                <div class="input-group-append">
-                    <select class="custom-select" id="inlineFormCustomSelect">
-                        <option selected>All Category</option>
-                        <option value="1">Doc Archive</option>
-                        <option value="2">Doc List</option>
-                        <option value="3">coreBOS</option>
-                    </select>
-                </div>
-                <button type="submit"><i class="icon_search"></i></button>
-            </div>
-        </form>
-    </div>
+
 </section>
+
+
