--- a/templates/partials/blog-item.html.twig
+++ b/templates/partials/blog-item.html.twig
@@ -1,5 +1,5 @@
 <div class="col-lg-8 col-md-8">
-    <div id="post" class="documentation_info">
+    <div class="documentation_info">
         {% if not hero_image_name %}
             <div class="content-title text-center">
                 {% include 'partials/blog/title.html.twig' with {title_level: 'h2'} %}
@@ -10,9 +10,9 @@
                 {% include 'partials/blog/taxonomy.html.twig' %}
             </div>
         {% endif %}
-           <article class="documentation_body" id="documentation">
+
                 {{ page.content|raw }}
-            </article>
+
 
             {% if page.header.continue_link is same as(true) and config.plugins.comments.enabled %}
                 {% include 'partials/comments.html.twig' %}
