Changed prism custom css for the code area || Changed font globally

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
   line-height: 26px;
   font-size: 16px;
   height: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #6b707f;
 }
@@ -67,7 +67,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 700;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #1d2746;
 }
 
@@ -222,7 +222,7 @@ ul.list-style li:last-child {
   margin: 2px;
   font-weight: 400;
   font-size: 0.85rem;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   text-decoration: none;
   line-height: 0.6rem;
@@ -823,7 +823,7 @@ ul.list-style li:last-child {
   font-weight: 400;
   color: #fff;
   position: relative;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .menu > .nav-item.submenu.mega_menu .dropdown-menu .tabContent .tab-pane .tab_list li a:before {
   content: "";
@@ -2022,7 +2022,7 @@ ul.list-style li:last-child {
   height: 65px;
 }
 .breadcrumb_area .banner_search_form button {
-  background: #10b3d6;
+  background: #04589b;
 }
 .breadcrumb_area .custom-select {
   line-height: 65px;
@@ -4302,6 +4302,7 @@ ul.list-style li:last-child {
 .full-width-doc .documentation_info {
   padding-left: 35px;
   padding-right: 35px;
+  padding-top: 55px;
 }
 .full-width-doc .doc_rightsidebar {
   margin-left: 0;
