--- a/templates/partials/right-sidebar.html.twig
+++ b/templates/partials/right-sidebar.html.twig
@@ -10,17 +10,58 @@
             <input type="checkbox" name="something" id="something" class="tab_switcher">
             <label for="something" class="tab-btn"><i class="far fa-moon"></i></label>
         </div>
+        <style>
+        .page-toc > li > a{
+            font-weight: 700 !important
+        }
+        .active_class {
+            background-color: #5794a1;
+            color: #ffffff;
+            border-radius: 10px;
+            padding: 10px;
+        }
 
+        </style>
         {% macro toc_loop(items) %}
             {% import _self as self %}
             {% for item in items %}
-                {% set class = loop.first ? 'first' : loop.last ? 'last' : null %}
-                <nav {% if class %}class="{{ class }}"{% endif %} class="list-unstyled doc_menu">
+                {% set class = loop.first ? 'first ' : loop.last ? 'last' : null %}
+                <li {% if class %}class="{{ class }}{{active}}  list-unstyled doc_menu "{% endif %}>
                     <a href="{{ item.uri }}"  class="nav-link">{{ item.label }}</a>
                     {% if item.children|length > 0 %}
-                        <nav {% if class %}class="{{ class }}"{% endif %} class="list-unstyled doc_menu">
+                        <ul style="padding-left: 20px;">
                             {{ _self.toc_loop(item.children) }}
-                        </nav>
+                        </ul>
+                    {% endif %}
+                </li>
+            {% endfor %}
+        {% endmacro %}
+
+        {% if config.get('plugins.page-toc.active') or attribute(page.header, 'page-toc').active %}
+        <div class="page-toc">
+            {% set table_of_contents = toc_items(page.content) %}
+            {% if table_of_contents is not empty %}
+                <h4>Table of Contents</h4>
+                <ul class="page-toc list-unstyled doc_menu ">
+                    {{ _self.toc_loop(table_of_contents.children) }}
+                </ul>
+            {% endif %}
+        </div>
+        {% endif %}
+    </div>
+</div>
+
+
+        {# {% macro toc_loop(items) %}
+            {% import _self as self %}
+            {% for item in items %}
+                {% set class = loop.first ? 'list-unstyled doc_menu' : loop.last ? 'last' : null %}
+                <nav {% if class %}class="{{ class }}"{% endif %}  >
+                    <a href="{{ item.uri }}"  class="nav-link">{{ item.label }}</a>
+                    {% if item.children|length > 0 %}
+                        <ul {% if class %}class="{{ class }}"{% endif %} >
+                            {{ _self.toc_loop(item.children) }}
+                        </ul>
                     {% endif %}
                 </nav>
             {% endfor %}
@@ -30,11 +71,11 @@
             {% set table_of_contents = toc_items(page.content) %}
             {% if table_of_contents is not empty %}
                 <h6>On this page:</h6>
-                <nav {% if class %}class="{{ class }}"{% endif %} class="list-unstyled doc_menu">
+                <nav {% if class %}class="{{ class }}"{% endif %} >
                     {{ _self.toc_loop(table_of_contents.children) }}
                 </nav>
             {% endif %}
-        </div>
+        </div> #}
 {#
         <nav class="list-unstyled doc_menu" >
             <a href="#documentation" class="nav-link active">Documentation</a>
@@ -43,6 +84,4 @@
             <a href="#developer" class="nav-link">Not a developer?</a>
             <a href="#help" class="nav-link">We're here to help!</a>
         </nav> #}
-        {% endif %}
-    </div>
-</div>
+        {# {% endif %} #}
