--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -138,7 +138,7 @@
     {% endblock %}
 
     {% block mobile %}
-    <div class="mobile-container">
+    {# <div class="mobile-container">
         <div class="overlay" id="overlay">
             <div class="mobile-logo">
                 {% include 'partials/logo.html.twig' with {mobile: true} %}
@@ -147,7 +147,7 @@
                 {% include 'partials/navigation.html.twig' with {tree: true} %}
             </nav>
         </div>
-    </div>
+    </div> #}
     {% endblock %}
 
 {% block bottom %}
