--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,56 @@
+a:hover {
+  color: #10b3d6;
+}
+.h2, h2{
+  font-size: 1.75em !important;
+  font-weight: 600;
+  margin-bottom: 1em;
+}
+.h3, h3{
+  font-size: 1.75em !important;
+  font-weight: 400;
+  margin-bottom: 1em;
+}
+.toc-anchor.before {
+  margin-left: -24px;
+  padding-right: 8px;
+  transition: all 0.2s ease-in;
+}
+:hover > .toc-anchor, .toc-anchor:focus {
+  opacity: 1;
+}
+.list-group-item{
+  transition: all 0.3s ease-in-out;
+}
+.list-group-item:hover{
+  transform: translate3d(5px, 0, 0);
+}
+.list-group .list-group-item > a{
+  color: #1d2746;
+}
+.list-group .list-group-item > a:hover{
+  color: #10b3d6;
+}
+.body_dark .list-group .list-group-item > a{
+  color: #c7c9d3;
+}
+.body_dark .list-group .list-group-item > a:hover{
+  color: #10b3d6;
+}
+.card-header {
+  padding: 0.75rem 3.25rem;
+  margin: 5px -30px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(0,0,0,.125);
+}
+.body_dark .card-header{
+  border-bottom: 1px solid #c7c9d324;
+}
+.body_dark .section.bg-gray{
+  background-color: #171923;
+}
+
+
 div.code-toolbar > .toolbar a:hover,
 div.code-toolbar > .toolbar a:focus,
 div.code-toolbar > .toolbar button:hover,
@@ -64,4 +117,11 @@ pre[class*="language-"]>code {
 .token.operator, .token.entity, .token.url, .token.variable {
   color: #a67f59;
   background: none;
+}
+
+.gradient-bg{
+  background: #171923,#12141c,rgba(18,20,28,0)!important;
+}
+.p-name > a{
+  color:#10b3d6 !important;
 }
