--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -16,7 +16,6 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                     {% include 'partials/logo.html.twig' %}
-                        <li class="breadcrumb-item active" aria-current="page">coreBOS Documentation</li>
                     </ol>
                 </nav>
             </div>
@@ -42,7 +41,10 @@
             </section>
             </div>
             <div class="col-lg-2 col-sm-5">
-                <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                <a href="#" style="margin-left: 5px;" class="btn btn-dark">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="#" class="btn btn-info"><i style="padding-right: 7px;" class="icon_clock_alt"></i>Updates</a>
             </div>
         </div>
     </div>
